slightly more consistent terminology
SHA: 8fca69517a2c51d03801db4d843e23db00e79a77
Reason: push, by @darobin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -655,22 +655,22 @@ the victim.</p>
 <p>These asymmetries of information and of automation create commanding asymmetries of power. It is not
 so much that "<i>code is law</i>"  but rather that code is judge, jury, and executioner.</p>
 <p><dfn data-lt="governance|Data governance" id="dfn-governance" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">Data governance</dfn> is the system of <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-1">principles</a> that regulate <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-2">information flows</a>. When
-<a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-1">people</a> are involved in these <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-3">information flows</a>, <a data-link-type="dfn" href="#dfn-governance" class="internalDFN" id="ref-for-dfn-governance-1">data governance</a> determines how
+<a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-1">people</a> are involved in <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-3">information flows</a>, <a data-link-type="dfn" href="#dfn-governance" class="internalDFN" id="ref-for-dfn-governance-1">data governance</a> determines how
 these <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-2">principles</a> constrain and distribute the power of information between different <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-1">actors</a>.
 The <dfn id="dfn-principles" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">principles</dfn> describe the way in which different <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-2">actors</a> may, must,
 or must not produce or <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-2">process</a> flows of information from, to, or about other <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-3">actors</a>
 ([<cite><a class="bibref" data-link-type="biblio" href="#bib-gkc-privacy" title="Governing Privacy in Knowledge Commons">GKC-Privacy</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-iad" title=" Understanding Institutional Diversity">IAD</a></cite>]).</p>
-<p>Typically, <dfn id="dfn-actors" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">actors</dfn> are <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-2">people</a> but they can also be collective endeavours such as
+<p>Typically, <dfn data-plurals="actor" id="dfn-actors" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">actors</dfn> are <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-2">people</a> but they can also be collective endeavours such as
 companies, associations, or political parties (eg. in the case of espionage), which are known as
 <a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-1">parties</a>. It is important to keep in mind that not all people are equal in how they can resist
 the imposition of unfair <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-3">principles</a>: some <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-3">people</a> are more <a data-link-type="dfn" href="#dfn-vulnerable" class="internalDFN" id="ref-for-dfn-vulnerable-1">vulnerable</a> and therefore in greater
 need of protection. The focus of this document is on the impact that this power differential can
-have against people, but it can also impact other entities, such as companies or governments.</p>
+have against people, but it can also impact other <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-4">actors</a>, such as companies or governments.</p>
 <p><a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-4">Principles</a> vary from <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-1">context</a> to <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-2">context</a> ([<cite><a class="bibref" data-link-type="biblio" href="#bib-understanding-privacy" title="Understanding Privacy">Understanding-Privacy</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-contextual-integrity" title="Privacy As Contextual Integrity">Contextual-Integrity</a></cite>]): people
 have different expectations of <a data-link-type="dfn" href="#dfn-privacy" class="internalDFN" id="ref-for-dfn-privacy-2">privacy</a> at work, at a café, or at home for instance. Understanding and
 evaluating a privacy situation is best done by clearly identifying:</p>
 <ul>
-<li>Its <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-4">actors</a>, which include the subject of the information as well as the sender and the recipient
+<li>Its <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-5">actors</a>, which include the subject of the information as well as the sender and the recipient
 of the <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-4">information flow</a>. (Note that recipients might not always intend to be recipients.)</li>
 <li>The specific type of data in the <a data-link-type="dfn" href="#dfn-information" class="internalDFN" id="ref-for-dfn-information-5">information flow</a>.</li>
 <li>The <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-5">principles</a> that are in use in this specific context.</li>
@@ -681,7 +681,7 @@ not render them neutral — it merely indicates that they are supportive of the 
 they help to create. We must therefore determine which <a data-link-type="dfn" href="#dfn-principles" class="internalDFN" id="ref-for-dfn-principles-8">principles</a>
 best align with ethical Web values in Web <a data-link-type="dfn" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-3">contexts</a> ([<cite><a class="bibref" data-link-type="biblio" href="#bib-ethical-web" title="W3C TAG Ethical Web Principles">ETHICAL-WEB</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-why-privacy" title="Why Privacy Matter">Why-Privacy</a></cite>]).</p>
 <p><dfn data-lt="information|Information flows" data-plurals="information flow" id="dfn-information" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">Information flows</dfn> as understood in this document are information
-exchanged or processed by <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-5">actors</a>. The information itself need not necessarily be
+exchanged or processed by <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-6">actors</a>. The information itself need not necessarily be
 <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-1">personal data</a>. Disruptive or interruptive information flowing <em>to</em> a
 person is in scope, as is <a data-link-type="dfn" href="#dfn-de-identified" class="internalDFN" id="ref-for-dfn-de-identified-1">de-identified</a> <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-2">data</a> that can be used to manipulate people or that
 was extracted by observing people's behaviour on someone else's website.</p>
@@ -800,7 +800,7 @@ in <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-fo
 <a data-link-type="dfn" href="#dfn-governance" class="internalDFN" id="ref-for-dfn-governance-3">Governance</a> will often struggle to achieve its goals if it works primarily by
 increasing <em>individual</em> control instead of acting collectively.</p>
 <p>Collecting data at large scales can have significant pro-social outcomes. Problems tend to
-emerge when entities <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-13">process</a> <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-8">data</a>
+emerge when <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-7">actors</a> <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-13">process</a> <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-8">data</a>
 for collective benefit and for <a data-link-type="dfn" href="#dfn-self-dealing" class="internalDFN" id="ref-for-dfn-self-dealing-1">self-dealing</a> <a data-link-type="dfn" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-5">purposes</a> at the same time.
 The <a data-link-type="dfn" href="#dfn-self-dealing" class="internalDFN" id="ref-for-dfn-self-dealing-2">self-dealing</a> <a data-link-type="dfn" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-6">purposes</a> are often justified as bankrolling the pro-social outcomes
 but this requires collective oversight to be <a data-link-type="dfn" href="#dfn-appropriately" class="internalDFN" id="ref-for-dfn-appropriately-5">appropriate</a>.</p>
@@ -869,7 +869,7 @@ monitoring of their behaviour. Its <dfn class="export" data-export="" id="dfn-us
     Because the <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-14">user agent</a> is a <a data-link-type="dfn" href="#dfn-trustworthy-agent" class="internalDFN" id="ref-for-dfn-trustworthy-agent-1">trustworthy agent</a>, it is held to be loyal to the
     <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-43">person</a> using it in all situations, including in preference to the <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-15">user agent</a>'s implementer.
     When a <a data-link-type="dfn" href="#dfn-user-agent" class="internalDFN" id="ref-for-dfn-user-agent-16">user agent</a> carries out <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-16">processing</a> that is not in the <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-44">person</a>'s
-    interest but instead benefits another entity (such as the user agent's implementer) that behaviour is
+    interest but instead benefits another <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-8">actor</a> (such as the user agent's implementer) that behaviour is
     known as <dfn id="dfn-self-dealing" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">self-dealing</dfn>. Behaviour can be <a data-link-type="dfn" href="#dfn-self-dealing" class="internalDFN" id="ref-for-dfn-self-dealing-3">self-dealing</a> even if it is done at the
     same time as <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-17">processing</a> that is in the <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-45">person</a>'s interest, what matters is that it
     potentially conflicts with that <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-46">person</a>'s interest. <a data-link-type="dfn" href="#dfn-self-dealing" class="internalDFN" id="ref-for-dfn-self-dealing-4">Self-dealing</a> is always
@@ -1053,7 +1053,7 @@ indirectly related to an identified or identifiable <a data-link-type="dfn" href
 <p>If a <a data-link-type="dfn" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-64">person</a> could reasonably be identified or re-identified when <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-13">data</a> is combined with other
 <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-14">data</a>, then that makes that data <a data-link-type="dfn" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-15">personal data</a>.</p>
 <section id="data-users-and-use"><h4 id="data-users"><bdi class="secno">2.2.1 </bdi>Data users and use</h4><a class="self-link" href="#data-users" aria-label="Permalink for Section 2.2.1"></a><p>A <dfn data-lt="data processor|service provider" data-plurals="service providers" id="dfn-data-processor" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">service provider</dfn> or <a data-link-type="dfn" href="#dfn-data-processor" class="internalDFN" id="ref-for-dfn-data-processor-1">data processor</a> is considered to be the same
-<a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-13">party</a> as the entity contracting it to perform the relevant <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-18">processing</a> if it:</p>
+<a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-13">party</a> as the <a data-link-type="dfn" href="#dfn-actors" class="internalDFN" id="ref-for-dfn-actors-9">actor</a> contracting it to perform the relevant <a data-link-type="dfn" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-18">processing</a> if it:</p>
 <ul>
 <li>is processing the data on behalf of that <a data-link-type="dfn" href="#dfn-party" class="internalDFN" id="ref-for-dfn-party-14">party</a>;</li>
 <li>ensures that the data is only retained, accessed, and used as directed by that
@@ -1564,7 +1564,13 @@ Wendy Seltzer.</p>
       <p><b>Referenced in:</b></p>
       <ul>
     <li>
-    <a href="#ref-for-dfn-actors-1" title="§ 1. An Introduction to Privacy on the Web">§ 1. An Introduction to Privacy on the Web</a> <a href="#ref-for-dfn-actors-2" title="Reference 2">(2)</a> <a href="#ref-for-dfn-actors-3" title="Reference 3">(3)</a> <a href="#ref-for-dfn-actors-4" title="Reference 4">(4)</a> <a href="#ref-for-dfn-actors-5" title="Reference 5">(5)</a> 
+    <a href="#ref-for-dfn-actors-1" title="§ 1. An Introduction to Privacy on the Web">§ 1. An Introduction to Privacy on the Web</a> <a href="#ref-for-dfn-actors-2" title="Reference 2">(2)</a> <a href="#ref-for-dfn-actors-3" title="Reference 3">(3)</a> <a href="#ref-for-dfn-actors-4" title="Reference 4">(4)</a> <a href="#ref-for-dfn-actors-5" title="Reference 5">(5)</a> <a href="#ref-for-dfn-actors-6" title="Reference 6">(6)</a> 
+  </li><li>
+    <a href="#ref-for-dfn-actors-7" title="§ 1.2 Collective Governance">§ 1.2 Collective Governance</a> 
+  </li><li>
+    <a href="#ref-for-dfn-actors-8" title="§ 1.3 People's Agents">§ 1.3 People's Agents</a> 
+  </li><li>
+    <a href="#ref-for-dfn-actors-9" title="§ 2.2.1 Data users and use">§ 2.2.1 Data users and use</a> 
   </li>
   </ul>
     </div><div class="dfn-panel" hidden="" role="dialog" aria-modal="true" id="dfn-panel-for-dfn-information" aria-label="Links in this document to definition: Information flows">
