--- a/index.html
+++ b/index.html
@@ -398,14 +398,14 @@ have different expectations of [=privacy=] at work, at a café, or at home for i
 evaluating a privacy situation is best done by clearly identifying:
 
 * Its [=actors=], which include the subject of the information as well as the sender and the recipient
-  of the [=information flow=]. (Note that recipients might not always intend to be recipients.)
+  of the [=information flow=]. (Note that recipients might not always want to be recipients.)
 * The specific type of data in the [=information flow=].
 * The [=principles=] that are in use in this specific context.
 
 It is important to keep in mind that there are <em>always</em> privacy [=principles=] and that all
 of them imply different power dynamics. Some [=principles=] may be more permissive, but that does
 not render them neutral — it merely indicates that they are supportive of the power dynamic that
-they help to create. We must therefore determine which [=principles=]
+emerges from permissive [=processing=]. We must therefore determine which [=principles=]
 best align with ethical Web values in Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn data-lt='information'>Information flows</dfn> as understood in this document are information
