--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ social interactions.
 ## Individual Autonomy {#autonomy}
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
-without undue influence from other parties. People have limited intellectual resources and
+without undue influence from other [=parties=]. People have limited intellectual resources and
 time with which to weigh decisions, and by necessity rely on shortcuts when making
 decisions. This makes their preferences, including privacy preferences, malleable and susceptible to
 manipulation ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]). A [=person=]'s [=autonomy=] is enhanced by a
@@ -434,7 +434,7 @@ and [=autonomy=] is decreased when a similar shortcut goes against decisions mad
 ideal conditions.
 
 Affordances and interactions that decrease [=autonomy=] are known as <dfn>dark patterns</dfn>.
-A [=dark pattern=] does not have to be intentional. ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]])
+A [=dark pattern=] does not have to be intentional ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
 
 Because we are all subject to motivated reasoning, the design of defaults and affordances
 that may impact [=autonomy=] should be the subject of independent scrutiny.
@@ -442,7 +442,7 @@ that may impact [=autonomy=] should be the subject of independent scrutiny.
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 complete informational self-determination is impossible. This fact, however, should not be
 confused with the idea that privacy is dead. Careful design of our technological
-infrastructure can ensure that people's [=autonomy=] with respect to pertaining to their own [=data=]
+infrastructure can ensure that people's [=autonomy=] with respect to their own [=data=]
 is enhanced through [=appropriate=] defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
