--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ difficult, highly intentional, and temporary.
 When an [=opt-out=] mechanism exists, it should preferably be complemented by a
 <dfn>global opt-out</dfn> mechanism. The function of a [=global opt-out=] mechanism is to
 rectify the <dfn class="export">automation asymmetry</dfn> whereby service providers can automate
-[=data processing=] but [=people=] have to take manual action. A good example of a
+[=data processing=] but [=people=] have to take manual action to prevent it. A good example of a
 [=global opt-out=] mechanism is the <em>Global Privacy Control</em> [[?GPC]].
 
 Conceptually, a [=global opt-out=] mechanism is an automaton operating as part of the
