--- a/index.html
+++ b/index.html
@@ -493,14 +493,14 @@ form upon submission).
 
 ### Privacy Labour {#privacy-labour}
 
-<dfn data-lt="privacy labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
+<dfn data-lt="privacy labor|labour|labor">Privacy labour</dfn> is the practice of having a [=person=] carry out
 the work of ensuring [=data processing=] of which they are the subject or recipient is
 [=appropriate=], instead of having the [=parties=] be responsible for that work.
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
 [=privacy labour=].
 
 More generally, implementations of [=privacy=] are often dominated by self-governing approaches that
-offload labour to [=people=]. This is notably true of the regimes descended from the
+offload [=labour=] to [=people=]. This is notably true of the regimes descended from the
 <dfn data-lt="FIPs">Fair Information Practices</dfn> ([=FIPs=]), a loose set of principles initially
 elaborated in the 1970s in support of individual [=autonomy=] in the face of growing concerns with databases. The
 [=FIPs=] generally assume that there is sufficiently little [=data processing=] taking place that any
@@ -520,10 +520,9 @@ which one [=party=] may coerce other [=parties=] into facilitating its [=inappro
 practices, as is often the case with dominant players in advertising or
 in content aggregation ([[?Consent-Lackeys]], [[?CAT]]).
 
-Reference to the [=FIPs=] survives to this day. They are often referenced as <em>transparency
-and choice</em>, which, in today's digital environment, is often an indication that
+Reference to the [=FIPs=] survives to this day. They are often referenced as "<i>transparency
+and choice</i>", which, in today's digital environment, is often an indication that
 [=inappropriate=] [=processing=] is being described.
-
 
 
 ## Collective Governance {#collective}
