--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ but this requires collective oversight to be [=appropriate=].
 While transparency rarely helps enough to inform the individual choices that [=people=] may
 make or in increasing their [=autonomy=], it plays a critical role in letting
 researchers and reporters inform our
-collective decision-making about to privacy [=principles=]. This consideration extends the
+collective decision-making about privacy [=principles=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
 to ensure that "<i>broad testing and audit continues to be possible</i>" where
 [=information flows=] and automated decisions are involved.
