--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ decisions.
 The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web.
 [=User agents=] implement, to the extent possible, the [=principles=] that collective governance
 establishes in favour of individuals. They seek to prevent the creation of asymmetries of
-information, and serve their [=user=] by providing them with automation, to rectify
+information, and serve their [=user=] by providing them with automation to rectify
 [=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
 intrusive messages.
 
@@ -640,7 +640,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
 
 These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In academic
 research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
-[[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary".
+[[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary."
 
 Many of the [=principles=] described in the rest of this document extend the [=user agent=]'s duties and
 make them more precise.
