--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ if the same data were shared between unrelated [=parties=].
 
 <aside class="issue">
   Please note that the initial focus of this draft was on <a href="#intro"></a>. This section is
-  incomplete and less mature. The absence of a specific principle should not be seen as an
+  incomplete and has uneven maturity. The absence of a specific principle should not be seen as an
   indication that the Task Force considers it to be of lesser importance.
 </aside>
 
