--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ establishing and enforcing rules to govern the power of data.
 
 The Web is a social and technical system made up of [=information flows=]. Because this document
 is specifically about [=privacy=] as it applies to the Web, it focuses on privacy with respect to
-information flows. Our goal is not to boil the privacy ocean, but rather to provide enough
+information flows. Our goal is not to cover all privacy issues, but rather to provide enough
 background to support the Web community in making informed decisions about privacy and to weave
 privacy into the architecture of the Web. Few architectural principles are absolute, and privacy is
 no exception: privacy can come into tension with other desirable properties of an ethical
@@ -376,8 +376,7 @@ both increase the power of information and decrease the cost of a number of intr
 behaviours that would be more easily kept in check if the perpetrator had to be in the same room as
 the victim.
 
-These asymmetries of information and of automation create commanding asymmetries of power. It is not
-so much that "<i>code is law</i>"  but rather that code is judge, jury, and executioner.
+These asymmetries of information and of automation create commanding asymmetries of power.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in [=information flows=], [=data governance=] determines how
