Replace conflict with tension.

--- a/index.html
+++ b/index.html
@@ -1183,15 +1183,15 @@ to offer better protection by default? Given the contested nature of the [^a/pin
 the absence of a forcing function to support collective enforcement, the scheme failed to deliver
 improved privacy.
 
-## Balancing Conflicting Privacy Principles {#balancing}
+## Balancing Different Privacy Principles {#balancing}
 
-Sometimes different privacy principles come into conflict. Often this happens when one
+Sometimes different privacy principles come into tension. Often this happens when one
 user of a service is trying to invade another user's privacy: keeping a user's information
 private can limit the ways that a service can protect them or another user.
 
 However, the choice of which privacy principles to prefer is complex and depends heavily
 on the details of each particular situation. <span class="note">Note that people's privacy
-can also conflict with other important non-privacy concerns. As discussed in the
+can also be in tension with other important non-privacy concerns. As discussed in the
 [[[Ethical-Web]]], it's important to balance these concerns too, but this document doesn't
 discuss how to do that.</span>
 
