Find the h2 inside the bp-summary.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             prac.classList.remove('advisement');
             prac.classList.add('principle');
           }
-          let h2 = document.querySelector('#bp-summary > h2');
+          let h2 = document.querySelector('#bp-summary h2');
           h2.innerHTML = h2.innerHTML.replace('Best Practices Summary', 'Principles Summary');
         }
       ],
