no need to repeat principles everywhere

--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ law enforcement and intellligence agencies.
   This section has not been written.
 </aside>
 
-## Principles for Unwanted Information {#unwanted-information}
+## Unwanted Information {#unwanted-information}
 
 <div class="practice">
 
