Remove reference to current GDPR practice
Because of current legal issues, the state of GDPR consent is changing
rapidly. Most of the readers of this document may be in a future where
more GDPR consent UX accurately reflects the user's true intent.

--- a/index.html
+++ b/index.html
@@ -459,11 +459,11 @@ however, they are used as a way to avoid putting in the difficult work of decidi
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
 to the people using a system.
 
-In rare and highly specific cases, [=people=] should be able to [=consent=] to more
+In specific cases, [=people=] should be able to [=consent=] to more
 sensitive [=purposes=], such as having their [=identity=] recognised across contexts or
 their reading history shared with a company. The burden of proof on ensuring that informed
-[=consent=] has been obtained needs in this case to be very high (much higher than what prevails for
-instance in [[?GDPR]] jurisdictions as currently practiced). [=Consent=] is comparable to the
+[=consent=] has been obtained needs in this case to be very high.
+[=Consent=] is comparable to the
 general problem of permissions on the Web platform. In the same way that it should be clear when a
 given device capability is in use (eg. you are providing geolocation or camera access), sharing
 data should be set up in such a way that it requires deliberate, specific action from the [=person=]
