Remove "blanket" and re-word consent section
Original wording had "blanket" consent, which may not be clear.

Tried to make clearer the limited circumstances in which a user
might override their global privacy control.

--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@ rights in a relevant jurisdiction. (For instance, under [[?GDPR]], the [=person=
 conveying objections to [=processing=] based on legitimate interest or the withdrawal of
 [=consent=] to specific [=purposes=].) It should be noted that, since a [=global opt-out=]
 signal is reaffirmed automatically with every interaction, it will take precedence
-in terms of specificity over any manner of blanket [=consent=] that a site may obtain,
-unless that [=consent=] is directly attached to an interaction (eg. terms specified on a
-form upon submission).
+in terms of specificity over any general assertion of [=consent=] by a site,
+and only superseded by specific [=consent=] obtained through a deliberate action taken by
+the user with the intent of overriding their global opt-out.
 
 ### Privacy Labour {#privacy-labour}
 
