--- a/index.html
+++ b/index.html
@@ -1052,6 +1052,53 @@ or personalize content around his furry-interest.
 
 </div>
 
+## Collective Privacy {#collective-privacy}
+
+<div class="practice">
+
+<p>
+  <span class="practicelab" id="principle-collective-privacy">
+    [=Data=] [=processing=] that has collective consequences, for which informed individualistic
+    decisions are unlikely (due to the complexity of the processing, the volume or frequency of
+    processing, or both), or that cannot operate when individual decisions are enabled (eg. fraud
+    detection) must be governed by legitimate collective rules.
+  </span>
+</p>
+</div>
+
+We identify three types of situations in which establishing privacy rules will be
+better done through a collective process than individually. These are:
+
+1. **Processing with collective consequences**. For instance, if enough [=people=] reveal their
+membership in a given social group, then their behaviour can be analysed and used to discrimimate
+against [=people=] of that group even when they have decided _not_ to reveal [=information=] about
+themselves (eg. knowing that [=people=] of a given race or gender tend not to read a certain type of
+content makes it possible to target job ads to that content so that they are less likely to find
+them). We consider cases in which [=processing=] is unjust not from the violation of individual
+[=autonomy=] but because it violates ideals of social equality ([[?Relational-Governance]]).
+1. **Processing for which informed individual decision-making is unrealistic**. Expecting laypeople
+to make informed decisions relating to complex [=data=] [=processing=] or to make decisions on a
+very frequent basis even if the [=processing=] is relatively simple, is unrealistic if we also
+expect them to have reasonable levels of [=autonomy=] in making these decisions. When it comes to
+chemical safety, we do not expect [=people=] to be up to date with the domain's scientific literature
+or to conduct randomised controlled trials at home in order to decide for themselves which compound
+is tolerably safe and which isn't. In a similar vein, we should not expect [=people=] to make
+decisions as to which complex [=processing=] they are willing to subject themselves to.
+1. **Processing that cannot work when individual decisions are enabled**. For instance, if
+fraudsters can exclude themselves from fraud-detection processing, they will. A key aspect to note
+here is that, just because the [=processing=] _cannot_ work with individual consent and can be
+construed as legitimate does not automatically render it [=appropriate=]. Collective rules must
+still be established such that they can constrain the [=processing=] and offer guarantees as to its
+misuse, starting from a position of skepticism.
+
+The purpose of this principle is to require that [=data governance=] provide ways to distinguish
+[=appropriate=] [=data=] [=processing=] without relying on individual decisions whenever the latter
+are impossible, which is often ([[?Relational-Governance]], [[?Relational-Turn]]).
+
+Which forms of collective governance are recognised as legitimate will depend on domains. These may
+take many forms, such as governmental bodies at various administrative levels, standards
+organisations, worker bargaining units, or civil society fora.
+
 ## Principles for Safety Systems {#safety}
 
 <aside class="issue">
