--- a/index.html
+++ b/index.html
@@ -710,15 +710,29 @@ make them more precise.
 
 ## Balancing Different Privacy Principles {#balancing}
 
-Sometimes different privacy principles come into tension. Often this happens when one
-user of a service is trying to invade another user's privacy: keeping a user's information
-private can limit the ways that a service can protect them or another user.
+Sometimes the most obvious response to one privacy principle is in tension with another
+privacy principle. Often this happens when one user of a service is trying to invade
+another user's privacy: keeping a user's information private can limit the ways that a
+service can protect them or another user.
 
-However, the choice of which privacy principles to prefer is complex and depends heavily
-on the details of each particular situation. <span class="note">Note that people's privacy
-can also be in tension with other important non-privacy concerns. As discussed in the
-[[[Ethical-Web]]], it's important to balance these concerns too, but this document doesn't
-discuss how to do that.</span>
+<div class="practice">
+
+<p><span class="practicelab" id="principle-pareto-frontier">When confronted with an
+apparent tradeoff, first seek the Pareto frontier.</span></p>
+
+Given any initial design that doesn't perfectly satisfy all goals, there are usually some
+other designs that improve the situation for some goals without sacrificing anything about
+the other goals. Sometimes one of these other designs is good enough that tradeoffs are
+unnecessary.
+
+</div>
+
+Once one is choosing between different designs at the Pareto frontier, the choice of which
+privacy principles to prefer is complex and depends heavily on the details of each
+particular situation. <span class="note">Note that people's privacy can also be in tension
+with other important non-privacy concerns. As discussed in the [[[Ethical-Web]]], it's
+important to balance these concerns too, but this document doesn't discuss how to do
+that.</span>
 
 <aside class="example" id="example-sockpuppets" title="Sockpuppets">
 
