Add section id tag
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1106,7 +1106,7 @@ law enforcement and intellligence agencies.
 </aside>
 
 
-## Principles for Consent, Withdrawal of Consent, Opt-Outs, and Objections
+## Principles for Consent, Withdrawal of Consent, Opt-Outs, and Objections {#consent-principles}
 
 <div class="practice">
 <p>
