Simplify ease of consent/ease of withdrawal language
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1148,8 +1148,8 @@ Examples of alternatives to consent requests include:
 <div class="practice">
 <p>
   <span class="practicelab" id="principle-consent-withdraw">
-    It should be as easy, or easier, for a user to check what consent they have given
-	for a particular [=context=], or to withdraw consent, or to opt out or object,
+    It should be as easy for a user to check what consent they have given,
+	to withdraw consent, or to opt out or object,
 	as to give consent.
   </span>
 </p>
