Make interruption alternatives clearer
Co-authored-by: Jeffrey Yasskin <jyasskin@google.com>

--- a/index.html
+++ b/index.html
@@ -1131,7 +1131,7 @@ result in people erroneously giving consent that does not match their true prefe
 </p>
 </div>
 
-Examples of alternatives to consent requests include:
+Examples of alternatives to interrupting users with consent requests include:
 
  * Considering the information sharing norms in the site's audience
    and category, and requesting only consent that is appropriate
